@startuml
!pragma layout smetana


TextUI <-- StreamingService
FileIO <-- StreamingService
Category <-- StreamingService


Main *-- StreamingService
StreamingService "1" *-- "*" User
StreamingService "1" *-- "*" Media

Media <|-- Movie
Media <|-- Series

Playable <|.. Movie
Playable <|.. Series






class Category {
- ArrayList All (Arrays.asList)
}

class Main{
+ main (String[] args)
}

class StreamingService{
- ArrayList movies
- ArrayList series
- ArrayList users
- User currentUser
- List mediaLibrary

+ start()

- loadUsers()
- loadMedia()
- loadUserMedia()
- saveUserMedia()
- validateUser(String username, String password)
- createNewUser()
- startMenu()
- mainMenu()
- searchByName()
- searchByCategory()
- getListOfSaved()
- getListOfWatched()
- logIn()
}

abstract class Media
{
# String name
# int ReleaseYear
# double rating
# String category

+ media(String name, int releaseYear, double rating, String category)
+ playMedia(User currentUser)
}

class Movie
{
- lengthInMinutes

+playMedia(User u)
+ Movie(String name, int releaseYear, double rating, String category, double lengthInMinutes)
}

class Series
{
- int season
- int episode
- int endYear
- List seasons
- String yearRange

+ Series(String name, int releaseYear, double rating, String category, int season, int episode, int endYear)
+ playMedia(User u)

}

class User
{
- String username
- String password
- Arraylist seenMedie
- Arraylist wantsToSee

+ User(String username, String password)
}

class TextUI{
+ ArrayList<String> promptChoice( ArrayList<String> options, int limit, String msg)
+ displayList(ArrayList<String>list, String msg)
+ displayMsg(String msg)
+ promptNumeric(String msg)
+ String promptText(String msg)
+ promptBinary(String msg)
+ promptMenuOptions(ArrayList<String> menuOptions)
+ promptMenu(String menuHeading, ArrayList<String> menuOptions)
}

class FileIO{
+ saveData(ArrayList<String> list, String path, String header)
+ ArrayList<String> readData(String path)
+ String[] readData(String path, int length)
}

interface Playable
{

}

@enduml